--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -10,7 +10,6 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -132,4 +131,8 @@
   body {
     @apply bg-background text-foreground;
   }
+}
+
+html{
+  scroll-behavior: smooth;
 }
